--- a/style.css
+++ b/style.css
@@ -28,6 +28,32 @@ main {
     text-align: center;
 }
 
+#logo {
+    -webkit-animation: spin 5s infinite;
+    animation: spin 5s infinite;
+}
+
+@-webkit-keyframes spin{
+    from {
+        -webkit-transform: rotateY(0deg);
+    }
+    to {
+        -webkit-transform: rotateY(-360deg);
+    }
+}
+@keyframes spin{
+    from {
+        -moz-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        transform: rotateY(0deg);
+    }
+    to {
+        -moz-transform: rotateY(-360deg);
+        -ms-transform: rotateY(-360deg);
+        transform: rotateY(-360deg);
+    }
+}
+
 h2 {
     text-align: center;
 }
