--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ main {
 
 h2 {
     text-align: center;
+    padding: 10px 50px;
+    margin-top: 100px;
 }
 
 h3 {
@@ -72,6 +74,23 @@ a h3 {
     color: #FAF9F6;
     text-decoration: none !important;
 }
+
+.img-div {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 footer {
     flex-shrink: 0;
