--- a/style.css
+++ b/style.css
@@ -75,12 +75,36 @@ a h3 {
     text-decoration: none !important;
 }
 
+hr {
+    margin: 0;
+}
+
 .img-div {
     display: flex;
     justify-content: center;
     align-items: baseline;
 }
 
+nav {
+    display: flex;
+    justify-content: center;
+    font-size: 22px;
+
+}
+.nav-link {
+    color: #FAF9F6;
+    text-decoration: none;
+    padding: 0 40px;
+}
+.nav-active {
+    border-bottom: 2px solid #FAF9F6;
+    border-right: 2px solid #FAF9F6;
+    border-left: 1px solid #FAF9F6;
+}
+.nav-active:hover {
+    border-left: 2px solid #FAF9F6;
+    border-right: 1px solid #FAF9F6;
+}
 
 
 
