--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    cursor: url("img/cursor/normal.png"), auto;
 }
 body {
     display: flex;
@@ -85,6 +86,14 @@ h3 {
 p {
     margin: 0;
     text-align: center;
+}
+
+a:hover {
+    cursor: url("img/cursor/hover.png"), auto;
+}
+
+a:active {
+    cursor: url("img/cursor/click.png"), auto;
 }
 
 a h3 {
