--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ body {
     min-height: 100vh;
 }
 
+video {
+    z-index: -1;
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.4;
+}
+
 main {
     margin: 20px;
     height: auto;
