--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     background-color: black;
     /*background-image: url("background.jpg");*/
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 video {
@@ -22,13 +23,13 @@ video {
     position: fixed;
     top: 0;
     left: 0;
-    opacity: 0.4;
+    opacity: 0.2;
 }
 
 main {
     margin: 20px;
     height: auto;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
     flex: 1 0 auto;
 }
 
@@ -209,7 +210,7 @@ nav {
 
 footer {
     flex-shrink: 0;
-    background-color: rgba(200, 200, 200, 0.4);
+    background-color: rgba(200, 200, 200, 0.5);
     color: #fff;
     text-align: center;
     width: 100vw;
