--- a/style.css
+++ b/style.css
@@ -205,7 +205,25 @@ nav {
 }
 
 
+/* Über uns */
+/* Default mobile layout */
+.employee {
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 0 20px;
+}
 
+/* Desktop layout */
+@media (min-width: 768px) {
+    .employee-container {
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+    .employee {
+        margin-bottom: 0;
+    }
+}
 
 
 footer {
