--- a/style.css
+++ b/style.css
@@ -171,8 +171,21 @@ nav {
     display: flex;
     justify-content: center;
     font-size: 22px;
-
 }
+
+@media (max-width: 600px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-link {
+        padding: 10px 0;
+        width: 70%;
+        text-align: center;
+        border-bottom: 1px solid #FAF9F6;
+    }
+}
+
 .nav-link {
     color: #FAF9F6;
     text-decoration: none;
