--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* COLORS */
+/* Offwhite: #FAF9F6; */
+/* Red: red;*/
+
+
 html, body {
     height: 100%;
     cursor: url("img/cursor/normal.png"), auto !important;
@@ -284,6 +289,83 @@ nav {
 
 
 /* Projekte */
+/* Fremdkapital */
+@keyframes sizeWave {
+    0%, 100% { transform: scale(1); }
+    50% { transform: scale(2); }
+}
+.animated-text {
+    display: inline-block;
+    background: url('img/gifs/sparkle.gif') no-repeat center center;
+    background-size: cover;
+    padding: 10px;
+    letter-spacing: 2px;
+    font-size: 20px;
+}
+.animated-text span {
+    display: inline-block;
+    animation: sizeWave 2s infinite ease-in-out;
+}
+.animated-text span:nth-child(1) { animation-delay: 0s; }
+.animated-text span:nth-child(2) { animation-delay: 0.1s; }
+.animated-text span:nth-child(3) { animation-delay: 0.2s; }
+.animated-text span:nth-child(4) { animation-delay: 0.3s; }
+.animated-text span:nth-child(5) { animation-delay: 0.4s; }
+.animated-text span:nth-child(6) { animation-delay: 0.5s; }
+.animated-text span:nth-child(7) { animation-delay: 0.6s; }
+.animated-text span:nth-child(8) { animation-delay: 0.7s; }
+.animated-text span:nth-child(9) { animation-delay: 0.8s; }
+.animated-text span:nth-child(10) { animation-delay: 0.9s; }
+.animated-text span:nth-child(11) { animation-delay: 1.0s; }
+.animated-text span:nth-child(12) { animation-delay: 1.1s; }
+
+.project-row {
+    display: flex;
+    align-items: center;
+    border-bottom: #FAF9F6 1px solid;
+}
+.project-image {
+    width: 20%;
+    margin-right: 10px;
+    padding: 10px;
+}
+.project-details {
+    width: 75%;
+    text-align: left;
+}
+.project-details p {
+    text-align: left;
+}
+.project-details h4, h5 {
+    margin: 0;
+}
+.project-details h5 {
+    font-style: italic;
+}
+
+@media (max-width: 768px) {
+    .project-row {
+        flex-direction: column;
+    }
+    .project-image, .project-details {
+        width: 100%;
+        margin: 0;
+    }
+}
+
+.progress-bar {
+    width: 100%;
+    height: 10px;
+    background-color: #FAF9F6;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.progress {
+    height: 100%;
+    background-color: red; /* Green color */
+}
+
 /* Masonry Gallery */
 .gallery-container {
     max-width: 1200px;
