--- a/style.css
+++ b/style.css
@@ -136,6 +136,17 @@ a h3 {
     text-decoration: none !important;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0; 
+}
+
 strong {
     position: relative;
     display: inline-block;
